@@ -46,6 +46,29 @@ public class PlayerHelper extends StdBehavior
 		return "protectiveness of heroes";
 	}
 
+	protected int		num			= 999;
+
+	@Override
+	public void startBehavior(final PhysicalAgent forMe)
+	{
+		super.startBehavior(forMe);
+		if(forMe instanceof MOB)
+		{
+			if(parms.length()>0)
+			{
+				final List<String> V=CMParms.parse(parms.toUpperCase());
+				for(int i=V.size()-1;i>=0;i--)
+				{
+					if(CMath.isInteger(V.get(i)))
+					{
+						num=CMath.s_int(V.get(i));
+						V.remove(i);
+					}
+				}
+			}
+		}
+	}
+
 	@Override
 	public void executeMsg(final Environmental affecting, final CMMsg msg)
 	{
@@ -71,6 +94,23 @@ public class PlayerHelper extends StdBehavior
 		&&(CMLib.flags().canBeSeenBy(mob,monster))
 		&&(CMLib.flags().canBeSeenBy(target,monster))
 		&&(!target.isMonster()))
-			Aggressive.startFight(monster,mob,false,false,null);
+		{
+			final Room R=mob.location();
+			if(R!=null)
+			{
+				int numInFray=0;
+				if((num > 0) && (num < 999))
+				{
+					for(int m=0;m<R.numInhabitants();m++)
+					{
+						final MOB M=R.fetchInhabitant(m);
+						if((M!=null)&&(M.getVictim()==mob))
+							numInFray++;
+					}
+				}
+				if(((num==0)||(numInFray<num)))
+					Aggressive.startFight(monster,mob,false,false,null);
+			}
+		}
 	}
 }
