@@ -46,6 +46,29 @@ public class RaceHelper extends StdBehavior
 		return "same-race protecting";
 	}
 
+	protected int		num			= 999;
+
+	@Override
+	public void startBehavior(final PhysicalAgent forMe)
+	{
+		super.startBehavior(forMe);
+		if(forMe instanceof MOB)
+		{
+			if(parms.length()>0)
+			{
+				final List<String> V=CMParms.parse(parms.toUpperCase());
+				for(int i=V.size()-1;i>=0;i--)
+				{
+					if(CMath.isInteger(V.get(i)))
+					{
+						num=CMath.s_int(V.get(i));
+						V.remove(i);
+					}
+				}
+			}
+		}
+	}
+
 	@Override
 	public void executeMsg(final Environmental affecting, final CMMsg msg)
 	{
@@ -67,13 +90,28 @@ public class RaceHelper extends StdBehavior
 		&&(CMLib.flags().canBeSeenBy(target,observer))
 		&&(!BrotherHelper.isBrother(source,observer,false)))
 		{
-			if(observer.charStats().getMyRace().ID().equalsIgnoreCase(target.charStats().getMyRace().ID()))
+			final Room R=source.location();
+			if(observer.charStats().getMyRace().ID().equalsIgnoreCase(target.charStats().getMyRace().ID())
+			&&(R!=null))
 			{
-				String reason="THAT`S MY FRIEND!! CHARGE!!";
-				if((observer.charStats().getMyRace().ID().equals(target.charStats().getMyRace().ID()))
-				&&(!observer.charStats().getMyRace().ID().equals(source.charStats().getMyRace().ID())))
-					reason=observer.charStats().getMyRace().ID().toUpperCase()+"S UNITE! CHARGE!";
-				Aggressive.startFight(observer,source,true,false,reason);
+				int numInFray=0;
+				if((num > 0) && (num < 999))
+				{
+					for(int m=0;m<R.numInhabitants();m++)
+					{
+						final MOB M=R.fetchInhabitant(m);
+						if((M!=null)&&(M.getVictim()==source))
+							numInFray++;
+					}
+				}
+				if(((num==0)||(numInFray<num)))
+				{
+					String reason="THAT`S MY FRIEND!! CHARGE!!";
+					if((observer.charStats().getMyRace().ID().equals(target.charStats().getMyRace().ID()))
+					&&(!observer.charStats().getMyRace().ID().equals(source.charStats().getMyRace().ID())))
+						reason=observer.charStats().getMyRace().ID().toUpperCase()+"S UNITE! CHARGE!";
+					Aggressive.startFight(observer,source,true,false,reason);
+				}
 			}
 		}
 	}
