@@ -85,10 +85,11 @@ checklevel (makes this mob attack only those within 5 levels below him) \n\r\
 BEHAVIOR_ALIGNHELPER=\
 Behavior   : AlignHelper\n\r\
 Targets    : MOBs\n\r\
-Parameters : \n\r\
+Parameters : ([MAX COMBATANTS])\n\r\
 Example    : \n\r\
 Description: \n\r\
-Joins a fight on the side of anyone who is the same alignment as the mob. 
+Joins a fight on the side of anyone who is the same alignment as the mob. You \
+may optionally specify a maximum number of combatants that can join in using this behavior. 
 
 BEHAVIOR_ANTIVAGRANT=\
 Behavior   : AntiVagrant\n\r\
@@ -201,18 +202,20 @@ cataloged in the CATALOG system.
 BEHAVIOR_RACEHELPER=\
 Behavior   : RaceHelper\n\r\
 Targets    : MOBs\n\r\
-Parameters : \n\r\
+Parameters : ([MAX COMBATANTS])\n\r\
 Example    : \n\r\
 Description: \n\r\
-Joins a fight on the side of an identical mob, or one of the same race.
+Joins a fight on the side of an identical mob, or one of the same race. You may optionally \
+specify a maximum number of combatants that can join in using this behavior.
 
 BEHAVIOR_FAITHHELPER=\
 Behavior   : FaithHelper\n\r\
 Targets    : MOBs\n\r\
-Parameters : Faith to make this mob a member of\n\r\
+Parameters : [Faith to make this mob a member of] ([MAX COMBATANTS])\n\r\
 Example    : Odin\n\r\
 Description: \n\r\
-Joins a fight on the side of a mob of the same faith as specified in the parameters.
+Joins a fight on the side of a mob of the same faith as specified in the parameters. You may \
+optionally specify a maximum number of combatants that can join in using this behavior.
 
 BEHAVIOR_CLERICNESS=\
 Behavior   : Clericness\n\r\
@@ -1236,11 +1239,12 @@ See Prop_StayAboard for a helpful support property for patrollers with riders.
 BEHAVIOR_PLAYERHELPER=\
 Behavior   : PlayerHelper\n\r\
 Targets    : MOBs\n\r\
-Parameters : \n\r\
+Parameters : ([MAX COMBATANTS])\n\r\
 Example    : \n\r\
 Description: \n\r\
 The mob with this behavior will come to the defence of any player mob \
-against any non-player mob.
+against any non-player mob.  You may optionally specify a maximum number \
+of combatants that can join in using this behavior.
 
 BEHAVIOR_POKERDEALER=\
 Behavior   : PokerDealer\n\r\
